--- a/package.json
+++ b/package.json
@@ -1,11 +1,4 @@
 {
   "name": "node-sieve",
-  "version": "0.0.1",
-  "dependencies": {
-    "express": "2.5.x"
-  },
-  "engines": {
-    "node": "0.8.x",
-    "npm": "1.1.x"
-  }
+  "version": "0.0.1"
 }
